syntax = "proto3";

option java_package = "com.jash.protokit";

option java_outer_classname = "LibraryManagement";

message Address {
	string street = 1;
	string city = 2;
	string state = 3;
	string postal_code = 4;
	string country = 5;
}

message AddressOld {
	string street = 1;
	string city = 2;
	string state = 3;
	string postal_code = 4;
}

enum BookStatus {
	BORROWED = 0;
	AVAILABLE = 1;
}

enum MemberPlan {
	SILVER = 0;
	GOLD = 1;
	PLATINUM = 2;
}

message Book {
	int32 bookId = 1;
	string name = 2;
	string author = 3;
	string genre = 4;
	BookStatus status = 5;
}

message Member {
	int32 memberId = 1;
	string firstName = 2;
	string lastName = 3;
	string email = 4;
	Address address = 5;
	repeated string phoneNumbers = 6;
	repeated Book borrowHistory = 7;
	int32 booksOnHold = 8;
	MemberPlan plan = 9;
}